tests/analyzer/errors/enum_literals.rv
enum Marker { circle, cross }
fn main() {
    var foo = .bar
    var bar: int = .baz

    var marker: Marker = .triangle
}
